# Opaux

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  release.yml
config/: profile.example.yaml
nginx/: nginx-http-only.conf  nginx.conf
src/: __init__.py  analytics.py  applicator.py  cli.py  config.py  cover_letter.py  cv_formats.py  cv_parser.py  database.py  discovery.py  docx_builder.py  logger.py  pdf_renderer.py  scoring.py  scrapers.py  tailoring.py  tracker.py  translator.py  utils.py
templates/: cv_american.yaml  cv_europass.yaml  cv_german.yaml
tests/: __init__.py  test_pipeline.py  test_scoring.py  test_tailoring.py
web/: admin.py  app.py  auth.py  billing.py  config.py  email_service.py  extensions.py  profile_editor.py  scheduler.py
web/templates/: analytics.html  base.html  billing.html  dashboard.html  forgot_password.html  job_detail.html  jobs.html  landing.html  login.html  pricing.html  profile_editor.html  reset_password.html  settings.html  setup.html  signup.html
web/templates/admin/: index.html  users.html
web/templates/emails/: jobs_digest.html  reset_password.html  response_alert.html
