[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opaux"
version = "0.1.3"
description = "Automated job application pipeline powered by Claude AI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gordon Akaminko" }]
requires-python = ">=3.11"
keywords = ["jobs", "cv", "resume", "automation", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "playwright>=1.40.0",
    # python-jobspy moved to [project.optional-dependencies]
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "mypy>=1.10.0",
    "types-pyyaml",
    "types-requests",
]
scraping = [
    "python-jobspy>=1.1.0",
]
web = [
    "flask>=3.0.0",
    "flask-login>=0.6.0",
    "flask-wtf>=1.2.0",
    "flask-limiter>=3.5.0",
    "flask-mail>=0.10.0",
    "werkzeug>=3.0.0",
    "stripe>=9.0.0",
    "apscheduler>=3.10.0",
    "gunicorn>=22.0.0",
]
pdf = [
    "docx2pdf>=0.1.8",
    "pdfplumber>=0.11.0",
]

[project.scripts]
opaux = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/Gordon-Akaminko/opaux"
Issues = "https://github.com/Gordon-Akaminko/opaux/issues"

[tool.ruff]
line-length = 135
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E741", "B904", "F821", "F841", "SIM105", "SIM108", "SIM115", "B007"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"web/*" = ["E501"]
[tool.mypy]
